
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int rating_num ;

int check_rating_num (int num) {
  return (num >= 0 && num < rating_num);
}
